--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,12 +32,18 @@ dependencies:
     sdk: flutter
   cupertino_icons: ^1.0.8
   video_player: ^2.5.0  # Ensure this line is properly indented
+  shared_preferences: ^2.0.0  # Correctly indented
   # Add other dependencies here
-
-
-  # The following adds the Cupertino Icons font to your application.
+ # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
 
+  image_picker: ^0.8.6
+  intl: ^0.19.0
+
+  http: ^1.2.2
+
+
+  
 
 dev_dependencies:
   flutter_test:
@@ -54,12 +60,16 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 
 # The following section is specific to Flutter packages.
+# The following section is specific to Flutter packages.
 flutter:
+  uses-material-design: true  # Ensure this is correctly indented
+  assets:
+    - assets/logo.jpeg  # Make sure this path is correct
 
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
-  uses-material-design: true
+
 
   # To add assets to your application, add an assets section, like this:
   # assets:
